golang-hello-world/k8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "golang-hello-world"
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: "golang-hello-world"
